--- a/esp32/netmcu/components/userio_app/CMakeLists.txt
+++ b/esp32/netmcu/components/userio_app/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(srcs status_output.c status_output_switch.c so_out.c so_print.c) 
+set(srcs status_output.cc status_output_switch.cc so_out.cc so_print.cc) 
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DMCU_ESP32")
 
