Refactor code and build files

--- a/esp32/netmcu/CMakeLists.txt
+++ b/esp32/netmcu/CMakeLists.txt
@@ -6,9 +6,6 @@ set(PROJECT_NAME "tronferno-mcu")
 
 set(EXTRA_COMPONENT_DIRS ./components-mcu/components)
 
-set(CXXFLAGS "-std=gnu++2a")
-
-
 set(COMPONENTS
     app  app_config  app_net  cli_app  config  http_server_content  net_mqtt_app  userio_app
     
@@ -17,7 +14,24 @@ set(COMPONENTS
 	  bootloader esptool_py partition_table soc log spi_flash micro-ecc main efuse driver esp_rom  
 )
 
+set(cxx_standard gnu++2a)
+
+
+
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
+
+
+add_compile_definitions(MCU_ESP32)
+if(DEFINED ENV{DISTRO})
+add_compile_definitions(DISTRIBUTION)
+endif()
+if(DEFINED ENV{FLAVOR_LAN})
+add_compile_definitions(FLAVOR_LAN)
+endif()
+if(DEFINED ENV{CELLAR})
+add_compile_definitions(CELLAR)
+endif()
+
 
 project(netmcu esptool_py                
 )
