--- a/esp32/netmcu/components/userio_app/CMakeLists.txt
+++ b/esp32/netmcu/components/userio_app/CMakeLists.txt
@@ -1,14 +1,5 @@
 set(srcs status_output.cc status_output_switch.cc so_out.cc so_print.cc) 
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DMCU_ESP32")
-
-if(DEFINED ENV{DISTRO})
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDISTRIBUTION")
-endif()
-if(DEFINED ENV{FLAVOR_LAN})
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DFLAVOR_LAN")
-endif()
-
 idf_component_register(
     SRCS ${srcs} 
     INCLUDE_DIRS . "./include" 
@@ -16,3 +7,5 @@ idf_component_register(
     REQUIRES userio 
     PRIV_REQUIRES  app app_config cli_app config debug misc net net_mqtt_app stm32 txtio userio
     )
+    
+component_compile_options(-std=${cxx_standard})
