--- a/esp32/netmcu/components/cli_app/CMakeLists.txt
+++ b/esp32/netmcu/components/cli_app/CMakeLists.txt
@@ -8,12 +8,6 @@ set(srcs cli.cc  cli_out.cc
     parm_proto_buf.cc
 )
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DMCU_ESP32")
-
-if(DEFINED ENV{DISTRO})
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDISTRIBUTION")
-endif()
-
 idf_component_register(
     SRCS ${srcs} 
     INCLUDE_DIRS . "./include" 
@@ -23,3 +17,5 @@ idf_component_register(
                   stm32 txtio userio nanopb protobuf
                   mbedtls
 )
+
+component_compile_options(-std=${cxx_standard})
