--- a/esp32/netmcu/components/net_mqtt_app/CMakeLists.txt
+++ b/esp32/netmcu/components/net_mqtt_app/CMakeLists.txt
@@ -1,15 +1,5 @@
 set(srcs  mqtt.cc) 
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DMCU_ESP32")
-
-if(DEFINED ENV{DISTRO})
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDISTRIBUTION")
-endif()
-
-if(DEFINED ENV{CELLAR})
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DCELLAR")
-endif()
-
 idf_component_register(
     SRCS ${srcs} 
     INCLUDE_DIRS . "./include" 
@@ -17,3 +7,4 @@ idf_component_register(
     REQUIRES  app_config net_mqtt
     PRIV_REQUIRES app_config cli userio_app userio
  )
+ component_compile_options(-std=${cxx_standard})
