--- a/esp32/netmcu/components/http_server_content/CMakeLists.txt
+++ b/esp32/netmcu/components/http_server_content/CMakeLists.txt
@@ -11,4 +11,4 @@ idf_component_register(
                   mbedtls
    )
    
- component_compile_options(-std=${cxx_standard})
+ component_compile_options(-${component_compile_opts})
