--- a/esp32/netmcu/components/cli_app/CMakeLists.txt
+++ b/esp32/netmcu/components/cli_app/CMakeLists.txt
@@ -18,4 +18,4 @@ idf_component_register(
                   mbedtls
 )
 
-component_compile_options(-std=${cxx_standard})
+component_compile_options(-${component_compile_opts})
