--- a/esp32/netmcu/components/config/CMakeLists.txt
+++ b/esp32/netmcu/components/config/CMakeLists.txt
@@ -6,4 +6,4 @@ idf_component_register(SRCS ${srcs}
     REQUIRES app_config config_kvs net net_http_server net_mqtt
     PRIV_REQUIRES app_config key_value_store misc net_mqtt_app    
 )
-component_compile_options(-std=${cxx_standard})
+component_compile_options(-${component_compile_opts})
