--- a/esp32/netmcu/components/protobuf/CMakeLists.txt
+++ b/esp32/netmcu/components/protobuf/CMakeLists.txt
@@ -3,6 +3,7 @@ set(srcs
   zone_data.cc
 )
 
+set(pb_path ../../../../../mcu_com)
 
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DMCU_ESP32")
@@ -21,7 +22,7 @@ idf_component_register(
  
  add_custom_command(
      OUTPUT ${COMPONENT_DIR}/_force.h ${COMPONENT_DIR}/mcu_com.cc
-     COMMAND make -B all -C ../../../../../mcu_com && ln -sf ../../../../mcu_com/build/mcu_com.pb.c mcu_com.cc
+     COMMAND make -B all -C ${pb_path} && ln -sf ${pb_path}/build/mcu_com.pb.c mcu_com.cc
      VERBATIM)
   
 add_custom_target(pbuf_files ALL  DEPENDS ${COMPONENT_DIR}/_force.h )
