Fix build files

--- a/esp32/netmcu/components/protobuf/CMakeLists.txt
+++ b/esp32/netmcu/components/protobuf/CMakeLists.txt
@@ -18,7 +18,7 @@ idf_component_register(
     REQUIRES nanopb
    )
  
- component_compile_options(-${component_compile_opts})
+ component_compile_options(${component_compile_opts})
  
  add_custom_command(
      OUTPUT ${COMPONENT_DIR}/_force.h ${COMPONENT_DIR}/mcu_com.cc
