--- a/esp32/netmcu/components/stm32_com/CMakeLists.txt
+++ b/esp32/netmcu/components/stm32_com/CMakeLists.txt
@@ -8,4 +8,4 @@ idf_component_register(
     PRIV_REQUIRES app_config app cli config config_kvs debug misc net net_http_server net_mqtt_app net_mqtt stm32 txtio userio 
 )
 
-component_compile_options(-${component_compile_opts})
+component_compile_options(${component_compile_opts})
