--- a/esp32/netmcu/CMakeLists.txt
+++ b/esp32/netmcu/CMakeLists.txt
@@ -6,11 +6,7 @@ set(PROJECT_NAME "tronferno-mcu")
 
 set(EXTRA_COMPONENT_DIRS ./components-mcu/components)
 
-set(COMPONENTS
-    app  app_config  app_net  cli_app  config  http_server_content  net_mqtt_app  userio_app
-    
-    cli  config_kvs  debug  key_value_store  misc  misc_time  net  net_http_server  net_mqtt  stm32  storage  txtio  userio
-    
+set(COMPONENTS app_main
 	  bootloader esptool_py partition_table soc log spi_flash micro-ecc main efuse driver esp_rom  
 )
 
