--- a/esp32/netmcu/components/cli_app/CMakeLists.txt
+++ b/esp32/netmcu/components/cli_app/CMakeLists.txt
@@ -11,9 +11,8 @@ set(srcs cli.cc  cli_out.cc
 idf_component_register(
     SRCS ${srcs} 
     INCLUDE_DIRS . "./include" 
-    PRIV_INCLUDE_DIRS "./include/cli_app" ../../main/
     REQUIRES cli userio_app
-    PRIV_REQUIRES app_config app cli config config_kvs debug misc net net_http_server net_mqtt_app net_mqtt
+    PRIV_REQUIRES app_config app_misc cli config config_kvs debug misc net net_http_server net_mqtt_app net_mqtt
                   stm32 txtio userio nanopb protobuf
                   mbedtls
 )
