--- a/esp32/netmcu/components/app_misc/CMakeLists.txt
+++ b/esp32/netmcu/components/app_misc/CMakeLists.txt
@@ -1,13 +1,12 @@
-set(srcs esp32/main.cc esp32/main_setup.cc esp32/main_loop.cc rtc.cc esp32/unity_setup.cc watch_dog.cc esp32/kvstore.cc) 
+set(srcs rtc.cc watch_dog.cc esp32/kvstore.cc) 
 
 idf_component_register(
     SRCS ${srcs}
-    INCLUDE_DIRS "./include" ../.. 
-    PRIV_INCLUDE_DIRS . "./include/app" ../../main
+    INCLUDE_DIRS "./include"
     REQUIRES app_config debug misc firmware_update
     PRIV_REQUIRES app_net app_config cli_app config debug key_value_store misc stm32 storage txtio net_mqtt_app stm32_com net_http_server http_server_content
                   nvs_flash
-    EMBED_TXTFILES ./esp32/ca_cert.pem
+    EMBED_TXTFILES ./ca_cert.pem
 )
 
 component_compile_options(${component_compile_opts})
