--- a/esp32/netmcu/components/webapp/CMakeLists.txt
+++ b/esp32/netmcu/components/webapp/CMakeLists.txt
@@ -12,6 +12,9 @@ idf_component_register(
    )
  
  component_compile_options(${component_compile_opts})
+component_compile_features(${component_compile_features})
+component_compile_features(${component_compile_features})
+component_compile_features(${component_compile_features})
  
  add_custom_command(
      OUTPUT "${COMPONENT_DIR}/build/wapp.html.gz.c"
