--- a/esp32/netmcu/components/config/CMakeLists.txt
+++ b/esp32/netmcu/components/config/CMakeLists.txt
@@ -6,3 +6,6 @@ idf_component_register(SRCS ${srcs}
     PRIV_REQUIRES app_config key_value_store misc net_mqtt_app    
 )
 component_compile_options(${component_compile_opts})
+component_compile_features(${component_compile_features})
+component_compile_features(${component_compile_features})
+component_compile_features(${component_compile_features})
