--- a/esp32/netmcu/components/protobuf/CMakeLists.txt
+++ b/esp32/netmcu/components/protobuf/CMakeLists.txt
@@ -19,6 +19,9 @@ idf_component_register(
    )
  
  component_compile_options(${component_compile_opts})
+component_compile_features(${component_compile_features})
+component_compile_features(${component_compile_features})
+component_compile_features(${component_compile_features})
  
  add_custom_command(
      OUTPUT ${COMPONENT_DIR}/_force.h ${COMPONENT_DIR}/mcu_com.cc
