--- a/esp32/netmcu/components/userio_app/CMakeLists.txt
+++ b/esp32/netmcu/components/userio_app/CMakeLists.txt
@@ -8,3 +8,6 @@ idf_component_register(
     )
     
 component_compile_options(${component_compile_opts})
+component_compile_features(${component_compile_features})
+component_compile_features(${component_compile_features})
+component_compile_features(${component_compile_features})
