--- a/esp32/netmcu/components/protobuf/CMakeLists.txt
+++ b/esp32/netmcu/components/protobuf/CMakeLists.txt
@@ -3,7 +3,7 @@ set(srcs
   zone_data.cc
 )
 
-set(pb_path ../../../../../mcu_com)
+set(pb_path ${COMPONENT_DIR}/../../../../mcu_com)
 
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DMCU_ESP32")
@@ -18,14 +18,16 @@ idf_component_register(
     REQUIRES nanopb
    )
  
- component_compile_options(${component_compile_opts})
-component_compile_features(${component_compile_features})
-component_compile_features(${component_compile_features})
-component_compile_features(${component_compile_features})
+component_compile_options(${comp_compile_opts})
+component_compile_features(${comp_compile_feats})
+
  
  add_custom_command(
      OUTPUT ${COMPONENT_DIR}/_force.h ${COMPONENT_DIR}/mcu_com.cc
-     COMMAND make -B all -C ${pb_path} && ln -sf ${pb_path}/build/mcu_com.pb.c mcu_com.cc
+     COMMAND make -B all -C ${pb_path}
+     COMMAND echo "//////////////////////////////"
+     COMMAND ln -sf ${pb_path}/build/mcu_com.pb.c ${COMPONENT_DIR}/mcu_com.cc
+     COMMAND echo "//////////////////////////////"
      VERBATIM)
   
 add_custom_target(pbuf_files ALL  DEPENDS ${COMPONENT_DIR}/_force.h )
