--- a/esp32/netmcu/components/uout_app/CMakeLists.txt
+++ b/esp32/netmcu/components/uout_app/CMakeLists.txt
@@ -3,11 +3,11 @@ set(srcs status_output.cc status_output_switch.cc so_out.cc so_print.cc)
 idf_component_register(
     SRCS ${srcs} 
     INCLUDE_DIRS . "./include" 
-    REQUIRES userio 
-    PRIV_REQUIRES  app_misc app_config cli_app config debug misc net net_mqtt_app stm32 txtio userio
+    REQUIRES uout 
+    PRIV_REQUIRES  app_misc app_config cli_app config_app debug misc net net_mqtt_app stm32 txtio uout
     )
     
-component_compile_options(${component_compile_opts})
-component_compile_features(${component_compile_features})
-component_compile_features(${component_compile_features})
-component_compile_features(${component_compile_features})
+component_compile_options(${comp_compile_opts})
+component_compile_features(${comp_compile_feats})
+component_compile_features(${comp_compile_feats})
+component_compile_features(${comp_compile_feats})
