--- a/esp32/netmcu/components/cli_app/CMakeLists.txt
+++ b/esp32/netmcu/components/cli_app/CMakeLists.txt
@@ -11,13 +11,13 @@ set(srcs cli.cc  cli_out.cc
 idf_component_register(
     SRCS ${srcs} 
     INCLUDE_DIRS . "./include" 
-    REQUIRES cli userio_app
-    PRIV_REQUIRES app_config app_misc cli config config_kvs debug misc net net_http_server net_mqtt_app net_mqtt
-                  stm32 txtio userio nanopb protobuf
+    REQUIRES cli uout_app
+    PRIV_REQUIRES app_config app_misc cli config_app config_kvs debug misc net net_http_server net_mqtt_app net_mqtt
+                  stm32 txtio uout nanopb protobuf
                   mbedtls
 )
 
-component_compile_options(${component_compile_opts})
-component_compile_features(${component_compile_features})
-component_compile_features(${component_compile_features})
-component_compile_features(${component_compile_features})
+component_compile_options(${comp_compile_opts})
+component_compile_features(${comp_compile_feats})
+component_compile_features(${comp_compile_feats})
+component_compile_features(${comp_compile_feats})
