--- a/esp32/netmcu/components/app_misc/CMakeLists.txt
+++ b/esp32/netmcu/components/app_misc/CMakeLists.txt
@@ -4,7 +4,7 @@ idf_component_register(
     SRCS ${srcs}
     INCLUDE_DIRS "./include"
     REQUIRES app_config debug misc firmware_update
-    PRIV_REQUIRES app_net app_config cli_app config_app debug key_value_store misc stm32 storage txtio net_mqtt_app stm32_com net_http_server http_server_content
+    PRIV_REQUIRES app_net app_config app_cli config_app debug key_value_store misc stm32 storage txtio net_mqtt_app stm32_com net_http_server http_server_content
                   nvs_flash
     EMBED_TXTFILES ./ca_cert.pem
 )
