--- a/esp32/netmcu/components/stm32_com/CMakeLists.txt
+++ b/esp32/netmcu/components/stm32_com/CMakeLists.txt
@@ -5,7 +5,7 @@ idf_component_register(
     SRCS ${srcs} 
     INCLUDE_DIRS . "./include" 
     #REQUIRES 
-    PRIV_REQUIRES app_config app_misc cli config_app config_kvs debug misc net net_http_server net_mqtt_app net_mqtt stm32 txtio uout 
+    PRIV_REQUIRES app_config app_misc cli app_settings config_kvs utils_debug utils_misc net net_http_server net_mqtt_app net_mqtt stm32 txtio uout 
 )
 
 component_compile_options(${comp_compile_opts})
