--- a/esp32/netmcu/components/app_cli/CMakeLists.txt
+++ b/esp32/netmcu/components/app_cli/CMakeLists.txt
@@ -12,7 +12,7 @@ idf_component_register(
     SRCS ${srcs} 
     INCLUDE_DIRS . "./include" 
     REQUIRES cli uout_app
-    PRIV_REQUIRES app_config app_misc cli config_app config_kvs debug misc net net_http_server net_mqtt_app net_mqtt
+    PRIV_REQUIRES app_config app_misc cli app_settings config_kvs utils_debug utils_misc net net_http_server net_mqtt_app net_mqtt
                   stm32 txtio uout nanopb protobuf
                   mbedtls
 )
