--- a/esp32/netmcu/components/app_settings/CMakeLists.txt
+++ b/esp32/netmcu/components/app_settings/CMakeLists.txt
@@ -3,7 +3,7 @@ set(srcs config.cc config_kvs.cc config_comps.cc)
 idf_component_register(SRCS ${srcs} 
     INCLUDE_DIRS . "./include" 
     REQUIRES app_config config_kvs net net_http_server net_mqtt
-    PRIV_REQUIRES app_config key_value_store misc net_mqtt_app    
+    PRIV_REQUIRES  key_value_store utils_misc net_mqtt_app    
 )
 component_compile_options(${comp_compile_opts})
 component_compile_features(${comp_compile_feats})
