--- a/esp32/netmcu/components/uout_app/CMakeLists.txt
+++ b/esp32/netmcu/components/uout_app/CMakeLists.txt
@@ -1,10 +1,10 @@
-set(srcs status_output.cc status_output_switch.cc so_out.cc so_print.cc) 
+set(srcs status_output_switch.cc so_out.cc so_print.cc so_write_msg.cc so_write_config.cc) 
 
 idf_component_register(
     SRCS ${srcs} 
     INCLUDE_DIRS . "./include" 
     REQUIRES uout 
-    PRIV_REQUIRES  app_misc app_config app_cli config_app debug misc net net_mqtt_app stm32 txtio uout
+    PRIV_REQUIRES  app_misc app_config app_cli app_settings utils_debug utils_misc net net_mqtt_app stm32 txtio uout
     )
     
 component_compile_options(${comp_compile_opts})
