--- a/esp32/netmcu/components/net_mqtt_app/CMakeLists.txt
+++ b/esp32/netmcu/components/net_mqtt_app/CMakeLists.txt
@@ -3,8 +3,8 @@ set(srcs  mqtt.cc)
 idf_component_register(
     SRCS ${srcs} 
     INCLUDE_DIRS . "./include" 
-    REQUIRES  app_config net_mqtt
-    PRIV_REQUIRES  cli uout_app uout
+    REQUIRES  app_config 
+    PRIV_REQUIRES  cli uout_app uout net_mqtt
  )
  
 component_compile_options(${comp_compile_opts})
