--- a/esp32/netmcu/Makefile
+++ b/esp32/netmcu/Makefile
@@ -120,19 +120,43 @@ test.cm.ctest.current: test.cm.build
 host-test-all:
 	make -s --no-print-directory  test.cm.configure test.cm.ctest
 
+
 ############# Doxygen ###################
-
 DOXY_BUILD_PATH=$(THIS_ROOT)/build/doxy
-DOXY_CONFIG_FILES = ./Doxyfile $(HOST_TEST_BUILD_PATH)/doxy_input_file.txt
-DOXY_CONFIG_FILE = /tmp/Doxyfile
 
-.PHONY: doxy doxy.cm.configure doxy.cm.build
+.PHONY: doxy-usr-view  doxy-dev-view  doxy-api-view
+.PHONY: doxy-usr-build doxy-dev-build doxy-api-build 
 
-$(DOXY_CONFIG_FILE): test.cm.configure
-	cat $(DOXY_CONFIG_FILES) >$(DOXY_CONFIG_FILE)
-doxy-build: $(DOXY_CONFIG_FILE)
-	doxygen $(DOXY_CONFIG_FILE)
+$(DOXY_BUILD_PATH)/%/html/index.html: /tmp/doxy_%_file 
+	mkdir -p $(dir $@)
+	doxygen $^
 	
-doxy-view: doxy-build
-	xdg-open $(DOXY_BUILD_PATH)/html/index.html
+
+doxy-%-view: doxy-%-build
+	xdg-open $(DOXY_BUILD_PATH)/$*/html/index.html
+	
+doxy-usr-build: $(DOXY_BUILD_PATH)/usr/html/index.html FORCE
+doxy-usr-view: doxy-usr-build
+	xdg-open $(DOXY_BUILD_PATH)/usr/html/index.html
+
+doxy-dev-build: $(DOXY_BUILD_PATH)/dev/html/index.html FORCE
+doxy-dev-view: doxy-dev-build
+	xdg-open $(DOXY_BUILD_PATH)/dev/html/index.html
+	
+doxy-api-build: $(DOXY_BUILD_PATH)/api/html/index.html FORCE
+doxy-api-view: doxy-api-build
+	xdg-open $(DOXY_BUILD_PATH)/api/html/index.html
+
+/tmp/doxy_%_file: ./Doxyfile_% /tmp/doxy_input_%
+	cat $^ > $@
+
+/tmp/doxy_input_dev: FORCE
+	git ls-files '*.h' '*.c' '*.hh' '*.cc' '*.cpp' | sed "s~^~INPUT += $(THIS_ROOT)/~" > $@
+	cd components-mcu && git ls-files '*.h' '*.c' '*.hh' '*.cc' '*.cpp' | sed "s~^~INPUT += $(THIS_ROOT)/components-mcu/~" >> $@
+/tmp/doxy_input_api: FORCE
+	git ls-files '*.h' '*.hh' | fgrep include | sed "s~^~INPUT += $(THIS_ROOT)/~" > $@
+	cd components-mcu && git ls-files '*.h' '*.hh' | fgrep include | sed "s~^~INPUT += $(THIS_ROOT)/components-mcu/~" >> $@
+
+/tmp/doxy_input_usr: FORCE
+	echo "" > $@
 	
